--- a/vital_chi_app/docker-compose.yml
+++ b/vital_chi_app/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - ./:/app
       - /app/node_modules
     environment:
       - NODE_ENV=production
